# botcscripts

./: .gitignore  README.md  pyproject.toml
base3/Bad Moon Rising/: Bad Moon Rising.json
base3/Sects & Violets/: Sects & Violets.json
base3/Trouble Brewing/: Trouble Brewing.json  nights.json
experimental/A Lleech Of Distrust/: A Lleech Of Distrust.json
experimental/A Shot In The Dark/: A Shot in the Dark.json
experimental/Ancient Mechanisms/: script.json
experimental/Ataraxia/: script.json
experimental/Big Barrel/: Big Barrel.json
experimental/Blind Man's Bluff/: Blind Man's Bluff.json
experimental/Bomb Defusal/: script.json
experimental/Broken Circles/: Broken Circles.json
experimental/But Hear Me Out/: script.json
experimental/Carnage/: Carnage.json
experimental/Catfishing/: Catfishing.json
experimental/Chaos In The Streets/: Chaos In The Streets.json
experimental/Comrade Demon/: Comrade Demon.json
experimental/Court Of Miracles/: Court Of Miracles.json
experimental/Damsel in Distress/: script.json
experimental/Demon Hop Scotch/: Demon Hop Scotch.json  script.json
experimental/Devil's Blessing/: script.json
experimental/Double Trouble/: Double Trouble.json
experimental/Engineer Gaming/: script.json
experimental/Fiddler on the Roof/: Fiddler on the Roof.json
experimental/Grim Tidings/: Grim Tidings.json  app.json
experimental/Hide And Seek/: Hide And Seek.json
experimental/Informative TB/: Informative TB.json
experimental/Poppyganda/: Poppyganda.json
official/: character_copies.json
rulesets/: Quantum Clocktower.md
(+49 files in other folders)
